js into modules

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>POPstore</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <section>
+            <img src="img/pop-logo-white.svg" alt="logo">
+            <h3>popcorn store</h3>
+        </section>
+        <nav>
+            <aside class="cart-indicator"></aside>
+            <img src="img/icon-login.svg" alt="login icon">
+            <img class="cart-icon" src="img/icon-cart.svg" alt="cart icon">
+        </nav>
+    </header>
     <section class="hero">
         <svg width="95" height="68" viewBox="0 0 95 68" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="18.7024" cy="22.6757" r="18.7024" fill="white" fill-opacity="0.8"/>
