now calls fetchData directly

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>popcorn store</h1>
         <button id="start-btn">Start poppin!</button>
     </section>
-    <main>
+    <main class="hide">
 
     </main>
     <script type="module" src="js/main.js"></script>
